Stack the chapter title z-indexes correctly.

--- a/assets/css/storyteller/storyteller.css
+++ b/assets/css/storyteller/storyteller.css
@@ -154,7 +154,7 @@ h2 {
     position: absolute;
     width: 100%;
     display: block;
-    z-index: 2;
+    z-index: 3;
     }
   .longform .chapter-title h1 {
     position: relative;
@@ -200,7 +200,7 @@ h2 {
       top: 0;
       }
     .longform .chapter-title .lead-video {
-      z-index: 1;
+      z-index: 2;
       }
     .longform .chapter-title .lead-image {
       position: absolute!important;
@@ -248,7 +248,7 @@ h2 {
     position: absolute;
     bottom: 10%;
     left: 50%;
-    z-index: 2;
+    z-index: 3;
     width: 70px;
     height: 70px;
     overflow: hidden;
